// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variable Decorators Converts Arrow Function correctly 1`] = `
""use strict";

var hello = ___captureAssignment("VariableDeclaration", "hello", 1, "\\u03BB", function () {
  ___instrumentFunction("ArrowFunctionExpression", "hello", 1, {});
  return ___instrumentReturn("ReturnStatement", 1, "Hello World");
});"
`;

exports[`Variable Decorators Converts Assign to Undefined correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 3, 3);
count = ___captureAssignment("AssignmentExpression", "count", 2, undefined, undefined);;"
`;

exports[`Variable Decorators Converts Assign to built in function result correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 3, 3);
count = ___captureAssignment("AssignmentExpression", "count", 2, "\\u03BB", Math.max(1, 2, 3, 4));;"
`;

exports[`Variable Decorators Converts Assign to function result correctly 1`] = `
""use strict";

var sum = ___captureAssignment("VariableDeclaration", "sum", 1, "\\u03BB", function (a, b) {
  ___instrumentFunction("ArrowFunctionExpression", "sum", 1, {
    a: a,
    b: b
  });
  return ___instrumentReturn("ReturnStatement", 1, a + b);
});
var result = ___captureAssignment("VariableDeclaration", "result", 2, "\\u03BB", sum(2, 4));"
`;

exports[`Variable Decorators Converts Assign to operation correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 3, 3);
count = ___captureAssignment("AssignmentExpression", "count", 2, 3 + 7, 3 + 7);;"
`;

exports[`Variable Decorators Converts Boolean correctly 1`] = `
""use strict";

var isTrue = ___captureAssignment("VariableDeclaration", "isTrue", 1, true, true);"
`;

exports[`Variable Decorators Converts Chained assignment correctly 1`] = `
""use strict";

var value = ___captureAssignment("VariableDeclaration", "value", 1, "\\u03BB", 1 + 2 + 3 + 4);"
`;

exports[`Variable Decorators Converts Function correctly 1`] = `
""use strict";

var hello = ___captureAssignment("VariableDeclaration", "hello", 1, "\\u03BB", function () {
  ___instrumentFunction("FunctionExpression", "anonymous", 1, {});
  return ___instrumentReturn("ReturnStatement", 1, "Hello World");
});"
`;

exports[`Variable Decorators Converts Increment+= correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 2, 2);
count += ___captureAssignment("AssignmentExpression", "count", 2, count + 3, count + 3);;"
`;

exports[`Variable Decorators Converts Mixed assignment correctly 1`] = `
""use strict";

var sum = ___captureAssignment("VariableDeclaration", "sum", 1, "\\u03BB", function (a, b) {
  ___instrumentFunction("ArrowFunctionExpression", "sum", 1, {
    a: a,
    b: b
  });
  return ___instrumentReturn("ReturnStatement", 1, a + b);
});
var value = ___captureAssignment("VariableDeclaration", "value", 2, "\\u03BB", 3 + sum(2, 1));"
`;

exports[`Variable Decorators Converts Object correctly 1`] = `
""use strict";

var foo = ___captureAssignment("VariableDeclaration", "foo", 1, {
  bar: {
    baz: "foo-bar-baz"
  }
}, {
  bar: {
    baz: "foo-bar-baz"
  }
});"
`;

exports[`Variable Decorators Converts Re-assignment correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 0, 0);
count = ___captureAssignment("AssignmentExpression", "count", 2, 3, 3);;"
`;

exports[`Variable Decorators Converts Shorthand Operations correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 1, 1);
count += ___captureAssignment("UpdateExpression", "count", 2, 1, count + 1), count;
count -= ___captureAssignment("UpdateExpression", "count", 3, 1, count - 1), count;
count *= ___captureAssignment("AssignmentExpression", "count", 4, count * 2, count * 2);;"
`;

exports[`Variable Decorators Converts String correctly 1`] = `
""use strict";

var hello = ___captureAssignment("VariableDeclaration", "hello", 1, "Hello World", "Hello World");"
`;

exports[`Variable Decorators Converts const assignment correctly 1`] = `
""use strict";

var fixedCount = ___captureAssignment("VariableDeclaration", "fixedCount", 1, 8, 8);"
`;

exports[`Variable Decorators Converts let assignment correctly 1`] = `
""use strict";

var count = ___captureAssignment("VariableDeclaration", "count", 1, 1, 1);"
`;

exports[`Variable Decorators Converts multi value assignment correctly 1`] = `
""use strict";

var w = ___captureAssignment("VariableDeclaration", "w", 1, 4, 4),
  x = ___captureAssignment("VariableDeclaration", "x", 1, 3, 3);
var y = ___captureAssignment("VariableDeclaration", "y", 2, undefined, undefined),
  z = ___captureAssignment("VariableDeclaration", "z", 2, 54, 54);"
`;

exports[`Variable Decorators Converts var assignment correctly 1`] = `
""use strict";

var z = ___captureAssignment("VariableDeclaration", "z", 1, 54, 54);"
`;
